# Pre-os_de_produtos

./: README.md  product.py  pyproject.toml
app/: main.py
tests/: test_product.py
